--- a/BookStore.Infrastructure/BookStore.Persistence.csproj
+++ b/BookStore.Infrastructure/BookStore.Persistence.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Domain\Domain.csproj" />
+    <ProjectReference Include="..\Domain\BookStore.Domain.csproj" />
   </ItemGroup>
 
 </Project>
