--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     image: img-book-store
     build:
       context: .
-      dockerfile: ./BookStore/Dockerfile
+      dockerfile: ./BookStore.Web/Dockerfile
     ports:
       - "5001:8080"
     environment:
