--- a/BookStore.Application/BookStore.Application.csproj
+++ b/BookStore.Application/BookStore.Application.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Mapster" Version="7.4.0" />
     <PackageReference Include="Mapster.DependencyInjection" Version="1.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.1" />
+    <PackageReference Include="SimpleResults" Version="3.0.1" />
   </ItemGroup>
 
   <ItemGroup>
