--- a/BookStore.Domain/BookStore.Domain.csproj
+++ b/BookStore.Domain/BookStore.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="SimpleResults" Version="3.0.1" />
+  </ItemGroup>
+
 </Project>
