--- a/Presentation/BookStore.WebApi/appsettings.json
+++ b/Presentation/BookStore.WebApi/appsettings.json
@@ -5,5 +5,30 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Seq" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Seq",
+        "Args": {         
+          "serverUrl": "http://localhost:5341"
+        }
+      },
+      {
+        "Name": "Console", // Вывод в консоль
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} {Properties:j}{NewLine}" // Шаблон для вывода в консоль
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName" ] // Дополнительные данные для логирования
+  },
   "AllowedHosts": "*"
 }
