--- a/Presentation/BookStore.WebApi/appsettings.json
+++ b/Presentation/BookStore.WebApi/appsettings.json
@@ -1,12 +1,6 @@
-{
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
+{  
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Seq" ],
+    "Using": [ "Serilog.Sinks.Seq", "Serilog.Sinks.Console" ],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
@@ -22,13 +16,13 @@
         }
       },
       {
-        "Name": "Console", // Вывод в консоль
+        "Name": "Console",
         "Args": {
-          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} {Properties:j}{NewLine}" // Шаблон для вывода в консоль
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} {Properties:j}{NewLine}"
         }
       }
     ],
-    "Enrich": [ "FromLogContext", "WithMachineName" ] // Дополнительные данные для логирования
+    "Enrich": [ "FromLogContext", "WithMachineName", "CorrelationId" ]
   },
   "AllowedHosts": "*"
 }
