--- a/Core/BookStore.Application/BookStore.Application.csproj
+++ b/Core/BookStore.Application/BookStore.Application.csproj
@@ -9,7 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Mapster" Version="7.4.0" />
     <PackageReference Include="Mapster.DependencyInjection" Version="1.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.1" />
+    <PackageReference Include="Serilog" Version="4.2.0" />
     <PackageReference Include="SimpleResults" Version="3.0.1" />
   </ItemGroup>
 
