--- a/Presentation/BookStore.WebApi/BookStore.WebApi.csproj
+++ b/Presentation/BookStore.WebApi/BookStore.WebApi.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0" />    
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />    
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />    
+    <PackageReference Include="Serilog.Enrichers.ClientInfo" Version="2.1.2" />    
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />    
     <PackageReference Include="Serilog.Sinks.Seq" Version="9.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
