refit from warehouseservice

--- a/Core/BookStore.Application/BookStore.Application.csproj
+++ b/Core/BookStore.Application/BookStore.Application.csproj
@@ -9,12 +9,16 @@
   <ItemGroup>
     <PackageReference Include="Mapster" Version="7.4.0" />
     <PackageReference Include="Mapster.DependencyInjection" Version="1.0.1" />
+    <PackageReference Include="Refit.HttpClientFactory" Version="8.0.0" />
     <PackageReference Include="Serilog" Version="4.2.0" />
     <PackageReference Include="SimpleResults" Version="3.0.1" />
+    <PackageReference Include="Refit" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\WarehouseService\BookStore.Warehouse.Client\BookStore.Warehouse.Client.csproj" />
     <ProjectReference Include="..\BookStore.Domain\BookStore.Domain.csproj" />
+   
   </ItemGroup>
 
 </Project>
