--- a/Presentation/BookStore.WebApi/appsettings.Development.json
+++ b/Presentation/BookStore.WebApi/appsettings.Development.json
@@ -1,11 +1,13 @@
 {
   "ConnectionStrings": {
     "BookStoreDatabase": "Host=localhost;Port=5435;Database=bookstore;Username=user;Password=123"
+    
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  }
+  "IntegrationServices": {
+    "Services": {
+      "Warehouse": {
+        "BaseAddress": "localhost:28029"
+      }
+    }    
+  }  
 }
