--- a/Presentation/BookStore.WebApi/appsettings.json
+++ b/Presentation/BookStore.WebApi/appsettings.json
@@ -1,4 +1,4 @@
-{  
+{
   "Serilog": {
     "Using": [ "Serilog.Sinks.Seq", "Serilog.Sinks.Console" ],
     "MinimumLevel": {
@@ -11,7 +11,7 @@
     "WriteTo": [
       {
         "Name": "Seq",
-        "Args": {         
+        "Args": {
           "serverUrl": "http://localhost:5341"
         }
       },
@@ -24,5 +24,10 @@
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "CorrelationId" ]
   },
+  "IntegrationServices": [
+    {
+      "Warehouse": { "BaseAddress": "localhost:44337" }
+    }
+  ],
   "AllowedHosts": "*"
 }
