--- a/Presentation/BookStore.WebApi/BookStore.WebApi.csproj
+++ b/Presentation/BookStore.WebApi/BookStore.WebApi.csproj
@@ -38,6 +38,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\WarehouseService\BookStore.Warehouse.Client\BookStore.Warehouse.Client.csproj" />
     <ProjectReference Include="..\..\Core\BookStore.Application\BookStore.Application.csproj" />
     <ProjectReference Include="..\..\Core\BookStore.Domain\BookStore.Domain.csproj" />
     <ProjectReference Include="..\..\Infrastructure\BookStore.Persistence\BookStore.Persistence.csproj" />
